<?xml version="1.0"?>
<package>
  <name>robotstatus_msgs</name>
  <version>0.1.0</version>
  <description>
    <p>
      cvtebot status message : custom messages  for navigation packages.
    </p> 
  </description>

  <author email="liangjiajun@cvte.com">liangjiajun</author>
  <maintainer email="liangjiajun@cvte.com">liangjiajun</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
</package>
